 * Added reahl.tofu.nosesupport.set_run_fixture to reahl-tofu.
 * Added .get_attribute() method on HTMLElement.
 * Moved .xpath() method to be available for WidgetTester too.
 * Renamed charset to encoding on MethodResult and subclasses, ViewableFile and subclasses.
 * Renamed content_type args to mime_type, resulting in migration needed for PersistedFile.


 -- Iwan Vosloo <iwan@reahl.org>  Sat, 06 Sep 2014 11:50:00 +0200

python-reahl (3.0.0) unstable; urgency=low

 * Changed from using Elixir to Declarative (Blueprint: declarative).
 * Changed to run on Python3 (Blueprint: python3).

 -- Iwan Vosloo <iwan@reahl.org>  Sat, 06 Sep 2014 11:50:00 +0200

python-reahl (2.1.2) unstable; urgency=low

 * Implements https://blueprints.launchpad.net/reahl/+spec/phased-migration.
 * Implements https://blueprints.launchpad.net/reahl/+spec/datatable.
 * Implements https://blueprints.launchpad.net/reahl/+spec/tutorial-restructure.
 * Implements https://blueprints.launchpad.net/reahl/+spec/deprecation-warnings.
 * Closes bugs: #1326745, #1335641, #1336039, #1336042, #1356992, #1345577, #1345579.

 -- Iwan Vosloo <iwan@reahl.org>  Sun, 24 Aug 2014 13:50:00 +0200

python-reahl (2.1.1) unstable; urgency=low

 * Closes small bugs: #1322652, #1322833, #1322855, #1324018, #1324040.

 -- Iwan Vosloo <iwan@reahl.org>  Wed, 28 May 2014 12:30:00 +0200

python-reahl (2.1.0) unstable; urgency=low

 * Renamed several classes (and methods) to be more accessible to new users.
 * Changed to allow a page WidgetFactory set on individual Views.
 * Documentation and examples simplified.
 * Added hellonginx example.

 -- Iwan Vosloo <iwan@reahl.org>  Mon, 21 Apr 2014 11:30:00 +0200

python-reahl (2.1.0) unstable; urgency=low

 * Renamed several classes (and methods) to be more accessible to new users.
 * Changed to allow a page WidgetFactory set on individual Views.
 * Documentation and examples simplified.
 * Added hellonginx example.
