@@ -14,6 +14,8 @@ python-reahl (3.1.0) unstable; urgency=low
  * Moved .xpath() method to be available for WidgetTester too.
  * Renamed charset to encoding on MethodResult and subclasses, ViewableFile and subclasses.
  * Renamed content_type args to mime_type, resulting in migration needed for PersistedFile.
+ * Deprecated HMenu and VMenu in favour of HorizontalLayout and VerticalLayout.
+ * Changed @deprecated to include version and add it to docstring.
 
 
  -- Iwan Vosloo <iwan@reahl.org>  Sat, 06 Sep 2014 11:50:00 +0200
